# Aganitha-Assessment

./: README.md  pyproject.toml
src/aganitha_assessment/: __init__.py  constant.py  constants.py  fetcher.py  logger.py  main.py  mapper.py  writer.py
